--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 			<version>4.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.ejml</groupId>
+			<artifactId>ejml-all</artifactId>
+			<version>0.38</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
